# polylocale

./: .gitignore  CMakeLists.txt  CMakeSettings.json  TODO.md  polyloc.hpp  polylocale.cpp  polylocale.h  polyprintf.h  printf.cpp  test.cpp
src/: CMakeLists.txt  config.h.in  polylocale.cpp  polylocale.h
src/impl/: bitmask.hpp  fmt.cpp  fmtdefs.h  polyimpl.h  polyimpl.in.h  printf.cpp  printf.hpp  printf_fmt.hpp  strview.h
tests/: CMakeLists.txt  tests.cpp
